# 3D-Additively-Weighted-Voronoi-Diagram

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  awVd_ray.cpp  awVd_ray.h  bfs_for_vert.cpp  bfs_for_vert.h  cleanup_meshes.sh  compute_bisectors.h  icosphere.h  main.cpp  parser.h  power.cpp  power.h  ray_intersections.cpp  ray_intersections.h  tags  typedefs.h  voronoi_mesh_details.h
data/: bondi_classifier.txt
src/: awVd_ray.cpp  awVd_ray.h  bfs_for_vert.cpp  bfs_for_vert.h  compute_bisectors.cpp  compute_bisectors.h  icosphere.h  main.cpp  parser.h  power.cpp  power.h  ray_intersections.cpp  ray_intersections.h  typedefs.h  voronoi_mesh_details.cpp  voronoi_mesh_details.h
